fix: Update dropdown option values and center align exclusive highlights text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1100,7 +1100,7 @@ footer {
     }
 
     .exclusive-highlights-parent-data {
-        text-align: left;
+        text-align: center;
     }
 }
 
